# android-manifest-auditor

./: .gitignore  CONTRIBUTING.md  PUBLISHING_GUIDE.md  README.md  manifest-audit-config.yaml  pyproject.toml  sample-AndroidManifest.xml  test-deeplinks.xml  test-permissions.xml  test-sdk.xml
.github/workflows/: manifest-audit.yml
src/manifest_auditor/: __init__.py  auditor.py  cli.py  models.py
tests/: test_auditor.py  test_cli.py
